// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModelDetails /> should render properly 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-3 a:hover {
  color: #3A5DFF;
}

.emotion-4 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-5 {
  color: #ffffff;
  font-weight: 500;
  font-size: 21px;
  line-height: 30px;
  padding-bottom: 16px;
}

.emotion-6 {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 23px;
}

.emotion-7 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-9 {
  height: 16px;
}

.emotion-10 {
  border: none;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-16 button,
.emotion-16 a {
  margin-right: 16px;
}

.emotion-16 button:last,
.emotion-16 a:last {
  margin-right: 0;
}

.emotion-17 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-17,
.emotion-17:hover,
.emotion-17:visited,
.emotion-17 .noop {
  background-color: #3A5DFF;
}

.emotion-17:hover,
.emotion-17 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-17[aria-disabled=true],
.emotion-17 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-20 div {
  margin-left: 0;
}

.emotion-20 button {
  margin-right: 0;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-21:hover div,
.emotion-21:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-21:hover button,
.emotion-21:focus-within button {
  color: #ffffff;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-23 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-23:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-24:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-25 {
  font-size: 15px;
  line-height: 19px;
  padding: 8px;
}

.emotion-26 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-27 {
  font-size: 15px;
  line-height: 19px;
  padding-top: 16px;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-2"
        color="#0074f5"
        data-file-name="generating.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        "
        console_face_recognition
        " training in progress.
         
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/223fd17d-7028-1519-94a8-d2f0132bc0c8"
          href="/[projectId]/jobs/[jobId]"
          passHref={true}
        >
          <a>
            Check Status
          </a>
        </Link>
      </div>
    </div>
  </div>
  
  <div>
    <div
      className="emotion-4"
    >
      Model
       Name:
    </div>
    <h3
      className="emotion-5"
    >
      console_face_recognition
    </h3>
  </div>
  <ul
    className="emotion-6"
  >
    <li>
      <span
        className="emotion-7"
      >
        Model Type
        :
      </span>
       
      ZVI_FACE_RECOGNITION
    </li>
    <li>
      <span
        className="emotion-7"
      >
        Description
        :
      </span>
       
    </li>
  </ul>
  <div
    className="emotion-9"
  />
  <hr
    className="emotion-10"
  />
  <div
    className="emotion-9"
  />
  <div
    className="emotion-12"
  >
    <div>
      <ul
        className="emotion-6"
      >
        <li>
          <span
            className="emotion-7"
          >
            Last Trained
            :
          </span>
           
          ?
        </li>
        <li>
          <span
            className="emotion-7"
          >
            Last Applied
            :
          </span>
           
          ?
        </li>
      </ul>
      <div
        className="emotion-16"
      >
        <button
          className="emotion-17"
          onClick={[Function]}
          type="button"
        >
          Train Model
        </button>
        <button
          className="emotion-17"
          onClick={[Function]}
          type="button"
        >
          Train & Test
        </button>
        <button
          className="emotion-17"
          onClick={[Function]}
          type="button"
        >
          Train & Analyze All
        </button>
        <div
          className="emotion-20"
        >
          <div
            className="emotion-21"
          >
            <button
              aria-details="TrainingOptions"
              aria-label="Training Options"
              className="emotion-22"
              type="button"
            >
              <svg
                data-file-name="help.svg"
                height={20}
              />
            </button>
            <div
              className="emotion-23"
              id="TrainingOptions"
              role="tooltip"
            >
              <div
                className="emotion-24"
              />
              <div
                className="emotion-25"
              >
                <h3
                  className="emotion-26"
                >
                  Train Model
                </h3>
                Train a model without applying it to your assets.
                <h3
                  className="emotion-27"
                >
                  Train & Test
                </h3>
                Train and apply the model to your test set ONLY. This enables you to view the results in the matrix and assess your model’s performance. To save processing time, make adjustments to your model before applying it to all of your assets.
                <h3
                  className="emotion-27"
                >
                  Train & Analyze All
                </h3>
                Train the model and run the model analysis on all project assets.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ModelMatrixLink
      modelId="621bf775-89d9-1244-9596-d6df43f1ede5"
      projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    />
  </div>
</div>
`;

exports[`<ModelDetails /> should render properly 2`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #dbecff;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-2 {
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-left: 12px;
  color: #191919;
  font-weight: 500;
  white-space: pre-line;
}

.emotion-3 a {
  color: #191919;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  margin-left: 4px;
}

.emotion-3 a:hover {
  color: #3A5DFF;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  background-color: #ffb6b2;
  border-radius: 2px;
  padding: 12px;
  padding-left: 16px;
  padding-right: 16px;
}

.emotion-7 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-8 {
  color: #ffffff;
  font-weight: 500;
  font-size: 21px;
  line-height: 30px;
  padding-bottom: 16px;
}

.emotion-9 {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 23px;
}

.emotion-10 {
  color: #b3b3b3;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-12 {
  height: 16px;
}

.emotion-13 {
  border: none;
  border-bottom: 1px solid #4a4a4a;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 16px;
  padding-bottom: 16px;
}

.emotion-19 button,
.emotion-19 a {
  margin-right: 16px;
}

.emotion-19 button:last,
.emotion-19 a:last {
  margin-right: 0;
}

.emotion-20 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-20,
.emotion-20:hover,
.emotion-20:visited,
.emotion-20 .noop {
  background-color: #3A5DFF;
}

.emotion-20:hover,
.emotion-20 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-20[aria-disabled=true],
.emotion-20 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-23 div {
  margin-left: 0;
}

.emotion-23 button {
  margin-right: 0;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-left: 8px;
}

.emotion-24:hover div,
.emotion-24:focus-within div {
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
}

.emotion-24:hover button,
.emotion-24:focus-within button {
  color: #ffffff;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 0;
  padding: 0;
  background-color: transparent;
  color: #808080;
}

.emotion-26 {
  position: absolute;
  left: -10px;
  top: 28px;
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 400px;
  visibility: hidden;
  opacity: 0;
  -webkit-transition: all 0.5s ease 0.25s;
  transition: all 0.5s ease 0.25s;
  z-index: 1;
}

.emotion-26:hover {
  visibility: visible;
  opacity: 1;
}

.emotion-27:before {
  content: ' ';
  position: absolute;
  top: -6px;
  left: 14px;
  border-bottom: 6px solid #ffffff;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
}

.emotion-28 {
  font-size: 15px;
  line-height: 19px;
  padding: 8px;
}

.emotion-29 {
  font-size: 15px;
  line-height: 19px;
}

.emotion-30 {
  font-size: 15px;
  line-height: 19px;
  padding-top: 16px;
}

<div>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <svg
        className="emotion-2"
        color="#0074f5"
        data-file-name="generating.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        "
        console_face_recognition
        " training in progress.
         
        <Link
          as="/76917058-b147-4556-987a-0a0f11e46d9b/jobs/223fd17d-7028-1519-94a8-d2f0132bc0c8"
          href="/[projectId]/jobs/[jobId]"
          passHref={true}
        >
          <a>
            Check Status
          </a>
        </Link>
      </div>
    </div>
  </div>
  <div
    className="emotion-0"
  >
    <div
      className="emotion-5"
    >
      <svg
        color="#c92300"
        data-file-name="warning.svg"
        height={20}
      />
      <div
        className="emotion-3"
        role="alert"
      >
        Something went wrong. Please try again.
      </div>
    </div>
  </div>
  <div>
    <div
      className="emotion-7"
    >
      Model
       Name:
    </div>
    <h3
      className="emotion-8"
    >
      console_face_recognition
    </h3>
  </div>
  <ul
    className="emotion-9"
  >
    <li>
      <span
        className="emotion-10"
      >
        Model Type
        :
      </span>
       
      ZVI_FACE_RECOGNITION
    </li>
    <li>
      <span
        className="emotion-10"
      >
        Description
        :
      </span>
       
    </li>
  </ul>
  <div
    className="emotion-12"
  />
  <hr
    className="emotion-13"
  />
  <div
    className="emotion-12"
  />
  <div
    className="emotion-15"
  >
    <div>
      <ul
        className="emotion-9"
      >
        <li>
          <span
            className="emotion-10"
          >
            Last Trained
            :
          </span>
           
          ?
        </li>
        <li>
          <span
            className="emotion-10"
          >
            Last Applied
            :
          </span>
           
          ?
        </li>
      </ul>
      <div
        className="emotion-19"
      >
        <button
          className="emotion-20"
          onClick={[Function]}
          type="button"
        >
          Train Model
        </button>
        <button
          className="emotion-20"
          onClick={[Function]}
          type="button"
        >
          Train & Test
        </button>
        <button
          className="emotion-20"
          onClick={[Function]}
          type="button"
        >
          Train & Analyze All
        </button>
        <div
          className="emotion-23"
        >
          <div
            className="emotion-24"
          >
            <button
              aria-details="TrainingOptions"
              aria-label="Training Options"
              className="emotion-25"
              type="button"
            >
              <svg
                data-file-name="help.svg"
                height={20}
              />
            </button>
            <div
              className="emotion-26"
              id="TrainingOptions"
              role="tooltip"
            >
              <div
                className="emotion-27"
              />
              <div
                className="emotion-28"
              >
                <h3
                  className="emotion-29"
                >
                  Train Model
                </h3>
                Train a model without applying it to your assets.
                <h3
                  className="emotion-30"
                >
                  Train & Test
                </h3>
                Train and apply the model to your test set ONLY. This enables you to view the results in the matrix and assess your model’s performance. To save processing time, make adjustments to your model before applying it to all of your assets.
                <h3
                  className="emotion-30"
                >
                  Train & Analyze All
                </h3>
                Train the model and run the model analysis on all project assets.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ModelMatrixLink
      modelId="621bf775-89d9-1244-9596-d6df43f1ede5"
      projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    />
  </div>
</div>
`;
